some swagger improvements
